# codex

./: AGENTS.md  README.md
.github/workflows/: rust-release.yml
codex-rs/: Cargo.toml
codex-rs/app-server/src/: codex_message_processor.rs  message_processor.rs
codex-rs/chatgpt/src/: apply_command.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: debug_sandbox.rs  mcp_cmd.rs  proto.rs
codex-rs/cli/tests/: mcp_list.rs
codex-rs/common/src/: model_presets.rs
codex-rs/core/: Cargo.toml
codex-rs/core/src/: codex.rs  config.rs  config_loader.rs  conversation_manager.rs  default_client.rs  lib.rs  mcp_connection_manager.rs
codex-rs/core/src/config_loader/: macos.rs  mod.rs
codex-rs/core/src/rollout/: list.rs  recorder.rs  tests.rs
codex-rs/core/tests/suite/: cli_stream.rs  client.rs  rmcp_client.rs
codex-rs/exec/src/: event_processor_with_human_output.rs  lib.rs
codex-rs/login/src/: device_code_auth.rs
codex-rs/mcp-server/src/: codex_message_processor.rs  codex_tool_runner.rs  lib.rs  message_processor.rs
codex-rs/protocol/src/: protocol.rs
codex-rs/rmcp-client/: Cargo.toml
codex-rs/rmcp-client/src/: lib.rs  oauth.rs  perform_oauth_login.rs  rmcp_client.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  diff_render.rs  history_cell.rs  key_hint.rs  lib.rs  pager_overlay.rs  resume_picker.rs
codex-rs/tui/src/bottom_pane/: chat_composer.rs  footer.rs
codex-rs/tui/src/bottom_pane/snapshots/: codex_tui__bottom_pane__chat_composer__tests__backspace_after_pastes.snap  codex_tui__bottom_pane__chat_composer__tests__empty.snap  codex_tui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap  codex_tui__bottom_pane__chat_composer__tests__large.snap  codex_tui__bottom_pane__chat_composer__tests__multiple_pastes.snap  codex_tui__bottom_pane__chat_composer__tests__small.snap  codex_tui__bottom_pane__footer__tests__footer_shortcuts_default.snap  codex_tui__bottom_pane__footer__tests__footer_shortcuts_shift_and_esc.snap
codex-rs/tui/src/chatwidget/: tests.rs
codex-rs/tui/src/chatwidget/snapshots/: codex_tui__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap  codex_tui__chatwidget__tests__local_image_attachment_history_snapshot.snap  codex_tui__chatwidget__tests__model_reasoning_selection_popup.snap  codex_tui__chatwidget__tests__model_selection_popup.snap  codex_tui__chatwidget__tests__status_widget_active.snap
codex-rs/tui/src/status/: card.rs
codex-rs/tui/src/status/snapshots/: codex_tui__status__tests__status_snapshot_includes_monthly_limit.snap  codex_tui__status__tests__status_snapshot_includes_reasoning_details.snap  codex_tui__status__tests__status_snapshot_shows_empty_limits_message.snap  (+2 more)
docs/: config.md  exec.md
