[package]
edition = "2024"
name = "codex-rmcp-client"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = "1"
keyring = { version = "3.6", features = [
    "apple-native",
    "windows-native",
    "linux-native-async-persistent",
    "crypto-rust",
    "vendored",
] }
mcp-types = { path = "../mcp-types" }
rmcp = { version = "0.7.0", default-features = false, features = [
    "auth",
    "base64",
    "client",
    "macros",
    "schemars",
    "server",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
] }
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "tokio",
] }
futures = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { workspace = true }
dirs = { workspace = true }
oauth2 = "5"
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "io-std",
    "time",
] }
tracing = { version = "0.1.41", features = ["log"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
