[package]
edition = "2024"
name = "codex-rmcp-client"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = "1"
keyring = { workspace = true, features = [
    "apple-native",
    "windows-native",
    "linux-native-async-persistent",
    "crypto-rust",
    "vendored",
] }
mcp-types = { path = "../mcp-types" }
rmcp = { workspace = true, default-features = false, features = [
    "auth",
    "base64",
    "client",
    "macros",
    "schemars",
    "server",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
] }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "tokio",
] }
futures = { workspace = true, default-features = false, features = ["std"] }
reqwest = { workspace = true, default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
oauth2 = "5"
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "io-std",
    "time",
] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
